# autonomous-software-engineer

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  llm.py  main.py
app/agents/: code_fix_agent.py  indexing_agent.py  issue_analysis_agent.py  patch_applicator.py  pr_generation_agent.py  retrieval_agent.py
app/api/: dependencies.py
app/api/routes/: github_issues.py  indexing.py  issues.py  pr.py  testing.py
app/docker_runner/: runner.py
app/github/: client.py  cloner.py  pr_builder.py
app/hooks/: __init__.py  post_code_generation.py  post_test.py  pre_code_generation.py  pre_pr.py  pre_test.py
app/models/: __init__.py  issue.py  patch.py  pr.py  retrieval.py  state.py  symbol.py  test_result.py
app/parsers/: tree_sitter_parser.py
app/retrieval/: exact_matcher.py  semantic_retriever.py
app/utils/: retry.py
app/vectorstore/: faiss_store.py
app/workflow/: graph.py
tests/: test_api.py  test_parsers.py  test_retrieval.py
