[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autonomous-software-engineer"
version = "0.1.0"
description = "Autonomous Software Engineering Agent MVP"
requires-python = ">=3.11,<3.12"
dependencies = [
    # Web framework
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "python-multipart==0.0.9",
    "httpx==0.27.0",

    # LangChain / LangGraph
    "langchain==0.2.6",
    "langchain-core==0.2.10",
    "langchain-community==0.2.6",
    "langchain-google-genai==1.0.6",
    "langgraph==0.1.19",

    # Google Gemini (free tier)
    "google-generativeai==0.7.2",

    # Embeddings — local, free, no API key needed
    "sentence-transformers==3.0.1",
    "langchain-huggingface==0.0.3",

    # Vector store
    "faiss-cpu==1.8.0",

    # Tree-sitter parsing
    "tree-sitter==0.23.2",
    "tree-sitter-python==0.23.6",
    "tree-sitter-javascript==0.23.1",
    "tree-sitter-typescript==0.23.2",

    # Git / GitHub
    "gitpython==3.1.43",
    "PyGithub==2.3.0",

    # Docker SDK
    "docker==7.1.0",

    # Pydantic v2 + settings
    "pydantic==2.7.4",
    "pydantic-settings==2.3.4",

    # Code quality (used in post-gen hooks)
    "ruff==0.4.10",
    "black==24.4.2",

    # Utilities
    "structlog==24.2.0",
    "tenacity==8.3.0",
    "python-dotenv==1.0.1",
    "aiofiles==23.2.1",
    "numpy>=1.26.4,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "pytest-cov==5.0.0",
    "mypy==1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
