[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autonomous-software-engineer"
version = "0.1.0"
description = "Autonomous Software Engineering Agent MVP"
requires-python = ">=3.11,<3.12"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",

    # LangChain / LangGraph — let pip resolve compatible versions
    "langchain>=1.0.0",
    "langchain-core>=1.0.0",
    "langchain-community>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-ollama>=0.2.0",
    "langgraph>=1.0.0",

    # Google Gemini (free tier)
    "google-generativeai>=0.8.0",

    # Embeddings — local, free, no API key needed
    "sentence-transformers>=3.0.1",
    "langchain-huggingface>=0.1.0",

    # Vector store
    "faiss-cpu>=1.8.0",

    # Tree-sitter parsing
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",

    # Git / GitHub
    "gitpython>=3.1.40",
    "PyGithub>=2.3.0",

    # Docker SDK
    "docker>=7.0.0",

    # Pydantic v2 + settings
    "pydantic>=2.7.0",
    "pydantic-settings>=2.10.0",

    # Code quality (used in post-gen hooks)
    "ruff>=0.4.0",
    "black>=24.0.0",

    # Utilities
    "structlog>=24.0.0",
    "tenacity>=8.3.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.0.0",
    "numpy>=1.26.4,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = [
    "E501",   # line too long
    "B008",   # Depends() in defaults — standard FastAPI pattern
    "B904",   # raise from err — not required in HTTP handlers
    "SIM105", # contextlib.suppress — try/except is clearer here
    "B905",   # zip strict= — internal use, no need
    "UP042",  # StrEnum — keep str+Enum for Pydantic v2 compatibility
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
